--- a/day35-ImageCarousel/css/styles.scss
+++ b/day35-ImageCarousel/css/styles.scss
@@ -33,40 +33,37 @@ body {
 }
 
 .container {
-    width: auto;
-    height: $height;
-    max-width: $size;
+    width: 40rem;
+    height: 50rem;
     overflow: hidden;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
+    position: relative;
+    box-shadow: .3rem .2rem .3rem 0 rgba($color-dark, .5), -.3rem -.2rem .3rem 0 rgba($color-dark, .5);
+    transition: bottom .5s cubic-bezier(0, 1.266, 0, 0.352, 1);
     
     .gallery--container {
-        width: 40rem;
-        height: 50rem;
         display: flex;
-        position: relative;
         transform: translateX(0);
         transition: transform .5s ease-in-out;
-        box-shadow: .3rem .2rem .3rem .1rem rgba($color-dark, .5);
 
         & img {
             width: $size;
             height: $size;
-            min-width: 40rem;
-            max-height: 50rem;
+            max-width: 40rem;
+            // max-height: 50rem;
             object-fit: cover;
         }
+    }
+
+    &:hover .button--container {
+        bottom: 0;
     }
     
     .buttons--container {
         width: $size;
         height: 3rem;
-        position: relative;
-        // left:  0;
-        // bottom: 0;
+        position: absolute;
         display: flex;
+        margin: .2rem 0;
     
         & button {
             width: 20rem;
@@ -87,15 +84,18 @@ body {
             &:focus {
                 outline: 0;
             }
+
+            &.prev.left,
+            &.next.right {
+                transition: transform 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+            }
             
             &.prev:hover .left {
                 transform: translateX(-2rem);
-                transition: transform 1s cubic-bezier(0.075, 0.82, 0.165, 1);
             }
     
             &.next:hover .right {
                 transform: translateX(2rem);
-                transition: transform 1s cubic-bezier(0.075, 0.82, 0.165, 1);
             }
     
             &::before,
@@ -105,14 +105,24 @@ body {
                 transition: all 1s cubic-bezier(0.175, 0.885, 0.32, 1.275);
                 display: inline-flex;
             }
+
+            &.prev::before {
+                content: attr(data-prev);
+                opacity: 0;
+            }
+
+            &.next::before {
+                content: attr(data-next);
+                opacity: 0;
+            }
     
             &.prev:hover::before {
-                content: attr(data-prev);
+                opacity: 1;
             }
     
             &.next:hover::before {
-                content: attr(data-next);
                 transform: translateX(-2.5rem);
+                opacity: 1
             }
         }
     }
