--- a/day35-ImageCarousel/css/styles.css
+++ b/day35-ImageCarousel/css/styles.css
@@ -23,47 +23,30 @@ body {
 }
 
 .container {
-  width: auto;
-  height: 100vh;
-  max-width: 100%;
+  width: 40rem;
+  height: 50rem;
   overflow: hidden;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  position: relative;
+  -webkit-box-shadow: 0.3rem 0.2rem 0.3rem 0 rgba(44, 62, 80, 0.5), -0.3rem -0.2rem 0.3rem 0 rgba(44, 62, 80, 0.5);
+          box-shadow: 0.3rem 0.2rem 0.3rem 0 rgba(44, 62, 80, 0.5), -0.3rem -0.2rem 0.3rem 0 rgba(44, 62, 80, 0.5);
 }
 
 .container .gallery--container {
-  width: 40rem;
-  height: 50rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  position: relative;
   -webkit-transform: translateX(0);
           transform: translateX(0);
   -webkit-transition: -webkit-transform .5s ease-in-out;
   transition: -webkit-transform .5s ease-in-out;
   transition: transform .5s ease-in-out;
   transition: transform .5s ease-in-out, -webkit-transform .5s ease-in-out;
-  -webkit-box-shadow: 0.3rem 0.2rem 0.3rem 0.1rem rgba(44, 62, 80, 0.5);
-          box-shadow: 0.3rem 0.2rem 0.3rem 0.1rem rgba(44, 62, 80, 0.5);
 }
 
 .container .gallery--container img {
   width: 100%;
   height: 100%;
-  min-width: 40rem;
-  max-height: 50rem;
+  max-width: 40rem;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -71,10 +54,12 @@ body {
 .container .buttons--container {
   width: 100%;
   height: 3rem;
-  position: relative;
+  position: absolute;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin: .2rem 0;
+  bottom: .5rem;
 }
 
 .container .buttons--container button {
@@ -83,11 +68,14 @@ body {
   margin: .5rem .1rem;
   border: 0;
   border-radius: .5rem;
-  background: #2c3e50;
-  color: #ecf0f1;
+  background: rgba(236, 240, 241, 0.5);
+  color: #2c3e50;
   font-size: 1.65rem;
+  font-weight: 665;
   -webkit-box-shadow: 0 0.2rem 0.4rem 0.2rem rgba(44, 62, 80, 0.5);
           box-shadow: 0 0.2rem 0.4rem 0.2rem rgba(44, 62, 80, 0.5);
+  -webkit-backdrop-filter: blur(0.25rem);
+          backdrop-filter: blur(0.25rem);
   cursor: pointer;
 }
 
@@ -100,22 +88,21 @@ body {
   outline: 0;
 }
 
-.container .buttons--container button.prev:hover .left {
-  -webkit-transform: translateX(-2rem);
-          transform: translateX(-2rem);
+.container .buttons--container button.prev.left, .container .buttons--container button.next.right {
   -webkit-transition: -webkit-transform 1s cubic-bezier(0.075, 0.82, 0.165, 1);
   transition: -webkit-transform 1s cubic-bezier(0.075, 0.82, 0.165, 1);
   transition: transform 1s cubic-bezier(0.075, 0.82, 0.165, 1);
   transition: transform 1s cubic-bezier(0.075, 0.82, 0.165, 1), -webkit-transform 1s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
+.container .buttons--container button.prev:hover .left {
+  -webkit-transform: translateX(-2rem);
+          transform: translateX(-2rem);
+}
+
 .container .buttons--container button.next:hover .right {
   -webkit-transform: translateX(2rem);
           transform: translateX(2rem);
-  -webkit-transition: -webkit-transform 1s cubic-bezier(0.075, 0.82, 0.165, 1);
-  transition: -webkit-transform 1s cubic-bezier(0.075, 0.82, 0.165, 1);
-  transition: transform 1s cubic-bezier(0.075, 0.82, 0.165, 1);
-  transition: transform 1s cubic-bezier(0.075, 0.82, 0.165, 1), -webkit-transform 1s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 .container .buttons--container button::before, .container .buttons--container button::after {
@@ -128,13 +115,23 @@ body {
   display: inline-flex;
 }
 
-.container .buttons--container button.prev:hover::before {
+.container .buttons--container button.prev::before {
   content: attr(data-prev);
+  opacity: 0;
+}
+
+.container .buttons--container button.next::before {
+  content: attr(data-next);
+  opacity: 0;
+}
+
+.container .buttons--container button.prev:hover::before {
+  opacity: 1;
 }
 
 .container .buttons--container button.next:hover::before {
-  content: attr(data-next);
   -webkit-transform: translateX(-2.5rem);
           transform: translateX(-2.5rem);
+  opacity: 1;
 }
 /*# sourceMappingURL=styles.css.map */
