Proyecto 42: Live User Filter
Added 'hide' class on styles.css

--- a/day42-LiveUserFilter/css/styles.css
+++ b/day42-LiveUserFilter/css/styles.css
@@ -114,6 +114,10 @@ body {
   padding: 2.01rem;
 }
 
+.container .user--list li.hide {
+  display: none;
+}
+
 .container .user--list li img {
   width: 5rem;
   height: 5rem;
