--- a/day49-VideoPlayer/css/styles.css
+++ b/day49-VideoPlayer/css/styles.css
@@ -52,7 +52,7 @@ body {
 .video--container {
   width: 100%;
   max-width: 60vw;
-  position: relative;
+  position: absolute;
   overflow: hidden;
 }
 
@@ -66,18 +66,19 @@ body {
 }
 
 .video--container:hover .panel--container {
-  -webkit-transform: translateY(-100%);
-          transform: translateY(-100%);
+  -webkit-transform: translateY(10%);
+          transform: translateY(10%);
 }
 
 .video--container .panel--container {
   width: 100%;
   height: 3.6rem;
   padding: 3.6rem 6rem;
-  background: rgba(44, 62, 80, 0.5);
-  position: relative;
-  -webkit-transform: translateY(-10%);
-          transform: translateY(-10%);
+  background: rgba(44, 62, 80, 0.65);
+  position: absolute;
+  bottom: 2%;
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
   -webkit-transition: -webkit-transform 1s cubic-bezier(0.165, 0.84, 0.44, 1);
   transition: -webkit-transform 1s cubic-bezier(0.165, 0.84, 0.44, 1);
   transition: transform 1s cubic-bezier(0.165, 0.84, 0.44, 1);
@@ -90,53 +91,27 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  background: rgba(44, 62, 80, 0.35);
+  background: rgba(44, 62, 80, 0.7);
 }
 
 .video--container .panel--container .progress--bar {
   width: 10%;
   height: inherit;
-  background: #2c3e50;
-  border-radius: 0.5rem;
+  position: relative;
+  background: #65b6d6;
+  border-radius: 0 0.5rem 0.5rem 0;
 }
 
 .video--container .panel--container .progress__slider {
-  width: 100%;
+  width: 30%;
   height: inherit;
-  background: #65b6d6;
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
+  background: #ecf0f1;
   position: absolute;
   top: 0;
-  left: -0.2%;
+  left: 0;
   margin-top: 0;
-}
-
-.video--container .panel--container .progress__slider:focus {
-  outline: none;
-}
-
-.video--container .panel--container .progress__slider::-webkit-slider-thumb {
-  -webkit-appearance: none;
-          appearance: none;
-  -webkit-transition: all 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
-  transition: all 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
-}
-
-.video--container .panel--container .progress__slider:hover::-webkit-slider-thumb {
-  width: 1.75rem;
-  height: 1.75rem;
-  border-radius: 50%;
-  background: #65b6d6;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(44, 62, 80, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(44, 62, 80, 0.25);
-}
-
-.video--container .panel--container .progress__slider::-webkit-slider-runnable-track {
-  background: red;
-  width: 10%;
-  height: inherit;
+  border-radius: 0 0.5rem 0.5rem 0;
+  z-index: -1;
 }
 
 .video--container .panel--container .controllers {
@@ -153,6 +128,7 @@ body {
 
 .video--container .panel--container .controllers .volume--container {
   margin-top: -1rem;
+  margin-left: -2rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -240,7 +216,7 @@ body {
 
 .video--container .panel--container .controllers .timer--container .timer {
   display: inline-block;
-  font-size: 1.9rem;
+  font-size: 1.65rem;
   color: #ecf0f1;
 }
 
@@ -283,6 +259,7 @@ body {
   border-color: transparent transparent transparent #ecf0f1;
   border-width: 1.56rem 1.2rem 1.56rem 2.34rem;
   margin-top: -2rem;
+  margin-left: -3rem;
 }
 
 .video--container .panel--container .controllers .btn span.player:hover::before {
