--- a/day49-VideoPlayer/css/styles.scss
+++ b/day49-VideoPlayer/css/styles.scss
@@ -57,7 +57,7 @@ body {
 .video--container {
     width: $size;
     max-width: $width * .6;
-    position: relative;
+    position: absolute;
     overflow: hidden;
     & video {
         width: $size;
@@ -65,16 +65,17 @@ body {
     &:hover {
         transform: translateY(0);
         & .panel--container {
-            transform: translateY(-100%);
+            transform: translateY(10%);
         }
     }
     .panel--container {
         width: $size;
         height: $padding * 3;
         padding: $padding * 3 $padding * 5;
-        background: rgba($color-dark, .5);
-        position: relative;
-        transform: translateY(-10%);
+        background: rgba($color-dark, .65);
+        position: absolute;
+        bottom: 2%;
+        transform: translateY(100%);
         transition: transform 1s cubic-bezier(0.165, 0.84, 0.44, 1);
 
         .progress {
@@ -83,41 +84,24 @@ body {
             position: absolute;
             top: 0;
             left: 0;
-            background: rgba($color-dark, .35);
+            background: rgba($color-dark, .7);
             &--bar {
                 width: 10%;
                 height: inherit;
-                background: #2c3e50;
-                border-radius: $radius;
+                position: relative;
+                background: $color-light-blue;
+                border-radius: 0 $radius $radius 0
             }
             &__slider {
-                width: $size;
+                width: $size * .3;
                 height: inherit;
-                background: $color-light-blue;
-                appearance: none;
+                background: rgba($color-light, 1);
                 position: absolute;
                 top: 0;
-                left: -0.2%;
+                left: 0;
                 margin-top: 0;
-                &:focus {
-                    outline: none;
-                }
-                &::-webkit-slider-thumb {
-                    appearance: none;
-                    transition: all .5s cubic-bezier(0.165, 0.84, 0.44, 1);
-                }
-                &:hover::-webkit-slider-thumb {
-                    width: 1.75rem;
-                    height: 1.75rem;
-                    border-radius: $size * .5;
-                    background: $color-light-blue;
-                    box-shadow: 0 0 0 .2rem rgba($color-dark, .25);
-                }
-                &::-webkit-slider-runnable-track {
-                    background: red;
-                    width: 10%;
-                    height: inherit;
-                }
+                border-radius: 0 $radius $radius 0;
+                z-index: -1;
             }
         }
 
@@ -130,6 +114,7 @@ body {
 
             .volume--container {
                 margin-top: -1rem;
+                margin-left: -2rem;
                 display: flex;
                 align-items: center;
                 justify-content: center;
@@ -197,7 +182,7 @@ body {
                 margin-top: -1rem;
                 .timer {
                     display: inline-block;
-                    font-size: ($padding / $font-weight) * $font-weight + 0.7;
+                    font-size: ($padding / $font-weight) * $font-weight + 0.45;
                     color: $color-light;
                 }
             }
@@ -237,6 +222,7 @@ body {
                         border-color: transparent transparent transparent rgba($color-light, $alpha: 1);
                         border-width: $padding * 1.3 $padding $padding * 1.3 $padding * 1.95;
                         margin-top: -2rem;
+                        margin-left: -3rem;
                     }
                     &.player:hover::before {
                         border-color: transparent transparent transparent rgba($color-light, .95);
