--- a/day49-VideoPlayer/css/styles.css
+++ b/day49-VideoPlayer/css/styles.css
@@ -20,7 +20,7 @@ body {
 
 .container {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -34,6 +34,7 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  position: relative;
 }
 
 .container .heading {
@@ -43,10 +44,18 @@ body {
   color: #2c3e50;
   text-transform: capitalize;
   display: block;
-  position: relative;
+  position: absolute;
+  top: 0;
   border-bottom: 0.1vmin solid rgba(44, 62, 80, 0.2);
   border-radius: 0.5rem;
   text-align: center;
+}
+
+.container .status {
+  position: absolute;
+  bottom: 10%;
+  left: 9rem;
+  font-size: 2rem;
 }
 
 .video--container {
@@ -83,6 +92,7 @@ body {
   transition: -webkit-transform 1s cubic-bezier(0.165, 0.84, 0.44, 1);
   transition: transform 1s cubic-bezier(0.165, 0.84, 0.44, 1);
   transition: transform 1s cubic-bezier(0.165, 0.84, 0.44, 1), -webkit-transform 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+  z-index: 1;
 }
 
 .video--container .panel--container .progress {
