--- a/day49-VideoPlayer/css/styles.scss
+++ b/day49-VideoPlayer/css/styles.scss
@@ -34,11 +34,12 @@ body {
 
 .container {
     width: $size;
-    height: $height;
+    min-height: $height;
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
+    position: relative;
 
     .heading {
         width: $size;
@@ -47,10 +48,18 @@ body {
         color: $color-dark;
         text-transform: capitalize;
         display: block;
-        position: relative;
+        position: absolute;
+        top: 0;
         border-bottom: .1vmin solid rgba($color-dark, $alpha: .2);
         border-radius: $radius;
         text-align: center;
+    }
+
+    .status {
+        position: absolute;
+        bottom:$size * .1;
+        left: 9rem;
+        font-size: 2rem;
     }
 }
 
@@ -77,6 +86,7 @@ body {
         bottom: 2%;
         transform: translateY(100%);
         transition: transform 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+        z-index: 1;
 
         .progress {
             width: $size;
