--- a/day49-VideoPlayer/css/styles.css
+++ b/day49-VideoPlayer/css/styles.css
@@ -35,13 +35,13 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   position: relative;
+  color: #2c3e50;
 }
 
 .container .heading {
   width: 100%;
   max-width: 50vw;
   font-size: 3rem;
-  color: #2c3e50;
   text-transform: capitalize;
   display: block;
   position: absolute;
@@ -52,15 +52,17 @@ body {
 }
 
 .container .status {
+  width: 100%;
   position: absolute;
-  bottom: 10%;
-  left: 9rem;
+  bottom: 5%;
+  left: 17.5%;
   font-size: 2rem;
+  font-weight: 665;
 }
 
 .video--container {
   width: 100%;
-  max-width: 75vw;
+  max-width: 65vw;
   position: absolute;
   overflow: hidden;
 }
@@ -97,7 +99,7 @@ body {
 
 .video--container .panel--container .progress {
   width: 100%;
-  height: 1rem;
+  height: .8rem;
   position: absolute;
   top: 0;
   left: 0;
@@ -114,10 +116,12 @@ body {
   position: relative;
   background: #65b6d6;
   border-radius: 0 0.5rem 0.5rem 0;
+  -webkit-transition: width 650ms linear;
+  transition: width 650ms linear;
 }
 
 .video--container .panel--container .progress__slider {
-  width: 30%;
+  width: 0;
   height: inherit;
   background: #ecf0f1;
   position: absolute;
@@ -126,6 +130,8 @@ body {
   margin-top: 0;
   border-radius: 0 0.5rem 0.5rem 0;
   z-index: -1;
+  -webkit-transition: width 850ms cubic-bezier(0.29, 0.88, 0.99, 0.71);
+  transition: width 850ms cubic-bezier(0.29, 0.88, 0.99, 0.71);
 }
 
 .video--container .panel--container .controllers {
@@ -235,13 +241,19 @@ body {
 }
 
 .video--container .panel--container .controllers .preview--controllers {
+  width: 10%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   margin-top: -1.5rem;
 }
 
 .video--container .panel--container .controllers .btn {
-  width: 2.5rem;
-  height: 2.5rem;
-  padding: 1.2rem;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -285,7 +297,7 @@ body {
 }
 
 .video--container .panel--container .controllers .btn span.player.active::after {
-  left: 0.5rem;
+  left: -0.5rem;
 }
 
 .video--container .panel--container .controllers .btn span.player.active:hover::before, .video--container .panel--container .controllers .btn span.player.active:hover::after {
