--- a/day50-MusicPlayer/css/styles.scss
+++ b/day50-MusicPlayer/css/styles.scss
@@ -1,14 +1,23 @@
 // ========== FONTS
 $font-stack-1: 'Abel', sans-serif;
-$font-stack-2: 'Montserrat', sans-serif;
+$font-stack-2: 'Ubuntu', sans-serif;
 $font-weight: .95;
 // ========== VIEWPORT
 $width: 100vw;
 $height: 100vh;
 $size: 100%;
+$radius: .5rem;
+$padding: 1.2rem;
 // ========== COLORS
 $color-dark: #2c3e50;
-$color-light: #ecf0f1;
+$color-light: #fffafa;
+$color-pink: #ffc0cb;
+$color-light-blue: #bdd5ea;
+$color-light-pink: #ffb6c1;
+// ========== SHADOWS
+$shadow1: .4vmin .5vmin .5vmin 0 rgba($color-dark, .5);
+$shadow2: .5vmin .7vmin .5vmin rgba($color-dark, .5);
+$shadow3: 0 .1vmin .2vmin .25vmin rgba($color-dark, .35) inset;
 
 *,
 *::before,
@@ -22,8 +31,189 @@ html {
 
 body {
     width: $width;
-    height: $height;
+    min-height: $height;
+    display: grid;
+    place-items: center;
     margin: 0;
     padding: 0;
-    font-family: $font-stack-1;
+    background: linear-gradient(
+        -5deg,
+        $color-light-pink 25%,
+        $color-pink 78%
+    );
+    color: $color-dark;
+    overflow: hidden;
+}
+
+.container {
+    height: inherit;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    .header {
+        position: relative;
+        width: $size;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: $padding * 4;
+        .heading {
+            font-size: 3rem;
+            font-family: $font-stack-2;
+            font-weight: 500 * $font-weight;
+            &::first-letter {
+                text-transform: uppercase;
+                font-size: 5rem;
+            }
+        }
+    }
+}
+
+.music--player {
+    position: relative;
+    padding: 0;
+    margin: 0;
+    .progress--box {
+        width: $size;
+        max-width: 30rem;
+        height: 4rem;
+        position: relative;
+        left: 5rem;
+        bottom: 0;
+        background: $color-light-blue;
+        border-radius: 0 $radius 0 0;
+        transition: all .5s cubic-bezier(.89,.162,.76,-.672);
+        box-shadow: none;
+        z-index: 1;
+        .progress {
+            width: $size * .65;
+            height: $radius;
+            position: absolute;
+            top: $size * .5;
+            left: 9.35rem;
+            border-radius: $radius;
+            background: rgba($color-dark, .5);
+            box-shadow: $shadow3;
+            &--bar {
+                width: $size * .1;
+                height: inherit;
+                background: $color-light-pink;
+                box-shadow: $shadow3;
+                cursor: pointer;
+            }
+        }
+    }
+
+    .music--container {
+        width: $size;
+        min-width: 35rem;
+        height: 10rem;
+        position: relative;
+        background: $color-light;
+        border-radius: $padding 0 $padding $padding;
+        box-shadow: $shadow1;
+        z-index: 1;
+        .image--container {
+            position: absolute;
+            width: $padding * 12;
+            height: $padding * 12;
+            border-radius: $size * .5;
+            left: $radius * 2;
+            bottom: 2rem;
+            box-shadow: $shadow1;
+            &::after {
+                content: '';
+                position: absolute;
+                width: $padding;
+                height: $padding;
+                top: $size * .5;
+                left: $size * .5;
+                transform: translate(-50%,-50%);
+                border-radius: $size * .5;
+                background: $color-light;
+                box-shadow: $shadow3;
+            }
+            .avatar {
+                width: $size;
+                height: $size;
+                object-fit: cover;
+                border-radius: $size * .5;
+                margin: 0;
+            }
+        }
+
+        .controls--container {
+            width: $size * .5;
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            position: absolute;
+            top: $size * .5;
+            left: 50%;
+            transform: translate(-10%,-50%);
+            & .btn {
+                position: relative;
+                display: block;
+                padding: 0;
+                // border: 0;
+                background: none;
+                cursor: pointer;
+                &:focus {
+                    outline: 0;
+                }
+                &::before,
+                &::after {
+                    content: '';
+                    position: absolute;
+                    border: 0 solid transparent;
+                    top: 0;
+                    left: 0;
+                    transform: translate(-50%,-50%);
+                    transition: all .5s ease;
+                }
+                &.player::before {
+                    border-left-color: $color-light-blue;
+                    border-width: $padding + 1.25 $padding  $padding + 1.25 $padding * 2.75;
+                }
+                &.player.active::before,
+                &.player.active::after {
+                    border-width: $padding+1.25 $padding $padding+1.25 $padding * .75;
+                    border-color: $color-light-blue;
+                    border-radius: .35rem;
+                }
+                &.player.active::before {
+                    left: -1.25rem
+                }
+                &.player.active::after {
+                    left: $padding * 1.25;
+                }
+            }
+        }
+    }
+
+    .info {
+        width: 25rem;
+        height: 7rem;
+        padding: $padding $padding * 1.3;
+        position: absolute;
+        bottom: -5.75rem;
+        background: $color-light-blue;
+        border-radius: 0 0 $radius $radius;
+        box-shadow: $shadow1;
+        transition: all .5s cubic-bezier(.89, .162, .76, -.672);
+        z-index: -1;
+        & p {
+            display: block;
+            font-size: $padding * 1.2;
+            font-family: $font-stack-1;
+            padding: 0;
+            margin: $radius * 1.2;
+            text-transform: capitalize;
+            letter-spacing: $radius / 3;
+            & span {
+                display: inline-block;
+                font-weight: 900 * $font-weight;
+            }
+        }
+    }
 }
