--- a/day50-MusicPlayer/css/styles.scss
+++ b/day50-MusicPlayer/css/styles.scss
@@ -79,12 +79,16 @@ body {
         height: 4rem;
         position: relative;
         left: 5rem;
-        bottom: 0;
+        bottom: -4rem;
         background: $color-light-blue;
         border-radius: 0 $radius 0 0;
         transition: all .5s cubic-bezier(.89,.162,.76,-.672);
         box-shadow: none;
         z-index: 1;
+        &.active {
+            box-shadow: $shadow1;
+            bottom: 0;
+        }
         .progress {
             width: $size * .65;
             height: $radius;
@@ -113,6 +117,9 @@ body {
         border-radius: $padding 0 $padding $padding;
         box-shadow: $shadow1;
         z-index: 1;
+        &.play .image--container .avatar {
+            animation-play-state: running;
+        }
         .image--container {
             position: absolute;
             width: $padding * 12;
@@ -139,6 +146,19 @@ body {
                 object-fit: cover;
                 border-radius: $size * .5;
                 margin: 0;
+
+                animation: rotate 3s linear infinite;
+                animation-play-state: paused;
+
+                @keyframes rotate {
+                    from {
+                        transform: rotate(0deg);
+                    }
+
+                    to {
+                        transform: rotate(360deg);
+                    }
+                }
             }
         }
 
@@ -155,7 +175,7 @@ body {
                 position: relative;
                 display: block;
                 padding: 0;
-                // border: 0;
+                border: 0;
                 background: none;
                 cursor: pointer;
                 &:focus {
@@ -187,6 +207,23 @@ body {
                 &.player.active::after {
                     left: $padding * 1.25;
                 }
+                &.backward::before {
+                    border-right-color: $color-light-blue;
+                    border-width: $padding * .9
+                }
+                &.backward::after {
+                    border-color: $color-light-blue;
+                    border-width: $padding * .84 $radius * .45 $padding * .84 $radius * .45;
+                }
+                &.forward::before {
+                    border-left-color: $color-light-blue;
+                    border-width      : $padding * .9
+                }
+
+                &.forward::after {
+                    border-color: $color-light-blue;
+                    border-width: $padding * .84 $radius * .45 $padding * .84 $radius * .45;
+                }
             }
         }
     }
@@ -196,12 +233,16 @@ body {
         height: 7rem;
         padding: $padding $padding * 1.3;
         position: absolute;
-        bottom: -5.75rem;
+        bottom: 0;
         background: $color-light-blue;
         border-radius: 0 0 $radius $radius;
-        box-shadow: $shadow1;
+        box-shadow: none;
         transition: all .5s cubic-bezier(.89, .162, .76, -.672);
         z-index: -1;
+        &.active {
+            box-shadow: $shadow1;
+            bottom: -5.75rem;
+        }
         & p {
             display: block;
             font-size: $padding * 1.2;
