--- a/day50-MusicPlayer/css/styles.scss
+++ b/day50-MusicPlayer/css/styles.scss
@@ -10,10 +10,10 @@ $radius: .5rem;
 $padding: 1.2rem;
 // ========== COLORS
 $color-dark: #2c3e50;
-$color-light: #fffafa;
-$color-pink: #ffc0cb;
+$color-light: #ffffff;
+$color-pink: #ff8882;
 $color-light-blue: #bdd5ea;
-$color-light-pink: #ffb6c1;
+$color-light-pink: #f8a488;
 // ========== SHADOWS
 $shadow1: .4vmin .5vmin .5vmin 0 rgba($color-dark, .5);
 $shadow2: .5vmin .7vmin .5vmin rgba($color-dark, .5);
@@ -99,7 +99,7 @@ body {
             background: rgba($color-dark, .5);
             box-shadow: $shadow3;
             &--bar {
-                width: $size * .1;
+                width: 0;
                 height: inherit;
                 background: $color-light-pink;
                 box-shadow: $shadow3;
@@ -265,13 +265,13 @@ body {
     }
 
     .info {
-        width: 25rem;
+        width: 35rem;
         height: 7rem;
         padding: $padding $padding * 1.3;
         position: absolute;
         bottom: 0;
         background: $color-light-blue;
-        border-radius: 0 0 $radius $radius;
+        border-radius: 0 0 $padding $padding;
         box-shadow: none;
         transition: all .5s cubic-bezier(.89, .162, .76, -.672);
         z-index: -1;
