--- a/day50-MusicPlayer/css/styles.css
+++ b/day50-MusicPlayer/css/styles.css
@@ -52,14 +52,14 @@ body {
 }
 
 .container .header .heading {
-  font-size: 3rem;
+  font-size: 4rem;
   font-family: "Ubuntu", sans-serif;
   font-weight: 475;
 }
 
 .container .header .heading::first-letter {
   text-transform: uppercase;
-  font-size: 5rem;
+  font-size: 7rem;
 }
 
 .music--player {
@@ -106,6 +106,7 @@ body {
   width: 0;
   height: inherit;
   background: #f8a488;
+  border-radius: 0.5rem;
   -webkit-box-shadow: 0 0.1vmin 0.2vmin 0.25vmin rgba(44, 62, 80, 0.35) inset;
           box-shadow: 0 0.1vmin 0.2vmin 0.25vmin rgba(44, 62, 80, 0.35) inset;
   cursor: pointer;
@@ -135,8 +136,8 @@ body {
   border-radius: 50%;
   left: 1rem;
   bottom: 2rem;
-  -webkit-box-shadow: 0.4vmin 0.5vmin 0.5vmin 0 rgba(44, 62, 80, 0.5);
-          box-shadow: 0.4vmin 0.5vmin 0.5vmin 0 rgba(44, 62, 80, 0.5);
+  -webkit-box-shadow: 0 0.1vmin 0.2vmin 0.25vmin rgba(44, 62, 80, 0.35) inset, 0.4vmin 0.5vmin 0.5vmin 0 rgba(44, 62, 80, 0.5);
+          box-shadow: 0 0.1vmin 0.2vmin 0.25vmin rgba(44, 62, 80, 0.35) inset, 0.4vmin 0.5vmin 0.5vmin 0 rgba(44, 62, 80, 0.5);
 }
 
 .music--player .music--container .image--container::after {
@@ -161,8 +162,8 @@ body {
      object-fit: cover;
   border-radius: 50%;
   margin: 0;
-  -webkit-animation: rotate 3s linear infinite;
-          animation: rotate 3s linear infinite;
+  -webkit-animation: rotate 4s linear infinite;
+          animation: rotate 4s linear infinite;
   -webkit-animation-play-state: paused;
           animation-play-state: paused;
 }
