--- a/day50-MusicPlayer/css/styles.scss
+++ b/day50-MusicPlayer/css/styles.scss
@@ -58,12 +58,12 @@ body {
         justify-content: center;
         padding: $padding * 4;
         .heading {
-            font-size: 3rem;
+            font-size: 4rem;
             font-family: $font-stack-2;
             font-weight: 500 * $font-weight;
             &::first-letter {
                 text-transform: uppercase;
-                font-size: 5rem;
+                font-size: 7rem;
             }
         }
     }
@@ -102,6 +102,7 @@ body {
                 width: 0;
                 height: inherit;
                 background: $color-light-pink;
+                border-radius: $radius;
                 box-shadow: $shadow3;
                 cursor: pointer;
             }
@@ -127,7 +128,7 @@ body {
             border-radius: $size * .5;
             left: $radius * 2;
             bottom: 2rem;
-            box-shadow: $shadow1;
+            box-shadow: 0 .1vmin .2vmin .25vmin rgba($color-dark, .35) inset, $shadow1;
             &::after {
                 content: '';
                 position: absolute;
@@ -147,7 +148,7 @@ body {
                 border-radius: $size * .5;
                 margin: 0;
 
-                animation: rotate 3s linear infinite;
+                animation: rotate 4s linear infinite;
                 animation-play-state: paused;
 
                 @keyframes rotate {
